--- a/package.json
+++ b/package.json
@@ -3,11 +3,24 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "vite build --watch",
+    "build": "vite build"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "feather-icons": "^4.29.0",
+    "gridicons": "^3.4.0",
+    "postcss": "^8.4.19",
+    "sass": "^1.56.1",
     "vite": "^3.2.3"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "autoprefixer": "^10.4.13",
+    "bootstrap": "^5.2.2",
+    "codemirror": "^6.0.1",
+    "jquery": "^3.6.1",
+    "sanitize-html": "^2.7.3",
+    "showdown": "^2.1.0"
   }
 }
