--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,9 @@
   "minimum-stability": "stable",
   "require": {
     "monolog/monolog": "^3.2"
+  },
+  "require-dev": {
+    "fakerphp/faker": "^1.20",
+    "symfony/var-dumper": "^6.1"
   }
 }
