--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "vite-project",
   "private": true,
   "type": "module",
+  "files": [
+    "resources/dist"
+  ],
   "scripts": {
     "dev": "vite build --watch",
     "build": "vite build"
@@ -18,7 +21,6 @@
     "autoprefixer": "^10.4.13",
     "bootstrap": "^5.2.2",
     "codemirror": "^5.65.9",
-    "jquery": "^3.6.1",
     "sanitize-html": "^2.7.3",
     "showdown": "^2.1.0"
   }
